--- a/hkfsschain/scclient/src/App.css
+++ b/hkfsschain/scclient/src/App.css
@@ -32,6 +32,49 @@
   display: none;
 }
 
+td:hover {
+  color: white;
+  
+}
+
+#hoverStyleRow {
+  color: white;
+  background-color: grey;
+}
+
+#horizontalVerticalWrapper {
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+
+#horizontalVerticalThTd {
+  white-space: nowrap;
+}
+
+#customScrollY {
+  position: relative;
+  height: 200px;
+  overflow: auto;
+}
+
+#tableWrapperScrollY {
+  display: block;
+}
+
+table.dataTable thead .sorting:after,
+table.dataTable thead .sorting:before,
+table.dataTable thead .sorting_asc:after,
+table.dataTable thead .sorting_asc:before,
+table.dataTable thead .sorting_asc_disabled:after,
+table.dataTable thead .sorting_asc_disabled:before,
+table.dataTable thead .sorting_desc:after,
+table.dataTable thead .sorting_desc:before,
+table.dataTable thead .sorting_desc_disabled:after,
+table.dataTable thead .sorting_desc_disabled:before {
+bottom: .5em;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
