Added blink message about account status

--- a/hkfsschain/scclient/src/App.css
+++ b/hkfsschain/scclient/src/App.css
@@ -32,6 +32,23 @@
   display: none;
 }
 
+.blink {
+  animation: blinker 0.6s linear infinite;
+  color: hsl(45, 76%, 45%);
+  font-size: 1rem;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+.blink-fade {
+  animation: blinker-one 1s linear infinite;
+}
+@keyframes blinker-one {
+  0% {
+    opacity: 0;
+  }
+}
+
 td:hover {
   color: white;
 }
